Updated the README.md and the some test cases
